fixed table width to work better on mobile

--- a/www/style.css
+++ b/www/style.css
@@ -49,13 +49,13 @@ div.main {
 
 .styled-table {
     border-collapse: collapse;
-    margin: 25px 0;
+    /* margin: 25px 0; */
     margin-left: auto;
     margin-right: auto;
     font-size: 1em;
     /* font-family: sans-serif; */
     text-align: center;
-    min-width: 400px;
+    /* min-width: 10%; */
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
